# zipf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/zipf/: generator.h  rejection_inversion_generator.h  ycsb_generator.h
src/: bench.cpp  rejection_inversion_generator.cpp  test.cpp  ycsb_generator.cpp
test/: bench.py  chi_square.R  generalized_harmonic.py  plot.py
